# Threaded-Qt-Application

./: CMakeLists.txt  Main.qml  main.cpp  primecounter.cpp  primecounter.h
